syntax = "proto3";

package loginpb;

import "google/api/annotations.proto";

message LoginRequest{
   string username_email = 1;
   string password = 2;
}

message LoginResponse{
    string message = 1;
    int32 code = 2;
    string access_token = 3;
}

service LoginService{
    rpc LoginUserService (LoginRequest) returns (LoginResponse){
        option (google.api.http) = {
            post: "/v1/user/login"
            body:"*"
		};
    }
}